--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 #thread {
 }
 
-.posts,
+.postCollection,
 input,
 button {
 	background-color: #834848;
@@ -71,4 +71,14 @@ h4 {
 	padding: 10px;
 	display: flex;
 	justify-content: space-between;
+}
+
+.postsFoot > input {
+	border-color: #000000 mo !important;
+	border-width: 3px;
+}
+
+.newThreadDiv {
+	display: flex;
+	padding: 10px;
 }
